--- a/src/dkeeper_assets/src/index.html
+++ b/src/dkeeper_assets/src/index.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>dkeeper</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <main>
-      <img src="logo.png" alt="DFINITY logo" />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
-    </main>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Keeper App</title>
+      <link
+        href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+        rel="stylesheet"
+      />
+      <link rel="stylesheet" href="/styles.css" />
+    </head>
+    
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
